# Moot

./: .gitignore  README.md  pyproject.toml
data/: word_table.yaml
data/all/: selfies_word_table.yaml  smiles_word_table.yaml
scripts/: continue_optformer.py  continue_train.py  extract_feat.py  finetune_optformer.py  finetune_transformer.py  infer_core.py  infer_frag_optformer.py  infer_frag_transformer.py  infer_optformer.py  infer_transformer.py  inference.py  setup.py  train.py  train_core_optformer.py  train_core_transformer.py  train_cpiclassifier.py  train_frag_optformer.py  train_frag_transformer.py  train_npu.py  train_optformer.py  train_transformer.py
scripts/data_scripts/: 00_check_duplicates.py  01_fetch_unique_mol_id.py  01_generate_unique_id.py  02_canonicalize_mol.py  02_generate_lookup_dict.py  03_lookup_mol.py  03_lookup_smiles.py  04_build_word_table.py  04_filter_single_entry_targets.py  04_split_dataset.py  05_matched_num_stats.py  05_plot_matched_num_stats.py  05_proc_chembl_activity_entries.py  06_assign_activity_to_mmp.py  07_assign_activity_to_mmp.py  07_lookup_target.py  08_build_word_table.py  08_check_mmps.py  08_cons_finetune_dataset.py  09_cons_datasets.py  09_cons_finetune_dataset.py  09_cons_pretrain_datasets.py  09_proc_bindingdb_entries.py  10_cons_finetune_datasets.py  10_proc_chembl_activity_entries.py  11_assign_activity_to_mmp.py  12_lookup_target.py  bin_search.py  data_utils.py
scripts/plot_scripts/: 00_plot_loss.py  01_visual_mols.py  02_basic_metrics.py  02_mol_metrics.py  02_plot_heavy_dist.py  03_frag_metrics.py  config.py  utils.py
scripts/tasks/: basic_optformer_selfies.yaml  basic_optformer_smiles.yaml  (+32 more)
src/: data_metrics.py  data_utils.py  dataset.py  generator.py  inferencer.py  launcher.py  metrics.py  tokenizer.py  trainer.py  typing.py  utils.py
tests/: check_batch_pad.py  check_dataset.py  check_inference.py  check_model.py  check_multiproc.py  check_predict.py  check_tokenizer.py  check_trim_seqs.py
web/: app.py  config.py  utils.py
(+28 files in other folders)
