[project]
name = "OptFormer"
version = "0.1.0dev"
description = "Default template for PDM package"
authors = [
    {name = "Leo", email = "im.yczeng@foxmail.com"},
]
dependencies = [
    "torch==2.1.0",
    "pandarallel>=1.6.5",
    "rdkit>=2024.3.5",
    "scikit-learn>=1.4.2",
    "jaxtyping>=0.2.28",
    "nltk>=3.8.1",
    "PyYAML>=6.0.1",
    "terminaltables>=3.1.10",
    "matplotlib>=3.9.1",
    "numpy==1.26",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
include_packages = ["torch"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["src", "scripts/*"]

[tool.mypy]
ignore_missing_imports = true